--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <head>
     <title>웹</title>
     <meta charset="utf-8">
+    <style>
+        h1{
+            border-bottom: 10px solid red;
+            padding-bottom: 50px;
+        }
+        #container{
+            display: grid;
+            grid-template-columns: 200px 1fr;
+        }
+    </style>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-        <li><a href="1.html">html</a></li>
-        <li><a href="2.html">css</a></li>
-        <li><a href="3.html">javascript</a></li>
-    </ol>
-    Welcome!
-    WWW is <u>World <strong>Wide</strong> WEB.</u>
+    <div id="container">
+        <ol>
+            <li><a href="1.html">html</a></li>
+            <li><a href="2.html">css</a></li>
+            <li><a href="3.html">javascript</a></li>
+        </ol>
+    <div>
+        <h2>Welcome!</h2>
+        WWW is <u>World <strong>Wide</strong> WEB.</u>
+    </div>
+    </div>
+
 
     <div id="disqus_thread"></div>
     <script>
