--- a/review2.html
+++ b/review2.html
@@ -12,6 +12,15 @@
                 grid-template-columns: 200px 1fr;
             }
         </style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MY6B05PNQ"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-7MY6B05PNQ');
+        </script>
     </head>            
     <body>
         <h1><a href="index.html">web</a></h1>
